# OpenSource_Data_Virtualizer

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  STATUS.md  improvement-analysis.txt  product-documentation.txt  prompting-strategy.txt  session-prompts.txt
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  main.py
backend/app/ai/: analyze_and_visualize.py  anomaly_detector.py  conversation.py  prompts.py  schema_enricher.py  sql_generator.py
backend/app/api/: router.py  websocket.py
backend/app/connectors/: base.py  csv_connector.py  excel_connector.py  mysql.py  postgres.py  sqlite.py
backend/app/core/: constants.py  database.py  exceptions.py  logging_config.py  middleware.py  security.py  sql_validator.py
backend/app/models/: __init__.py  alert.py  alert_event.py  audit_log.py  base.py  chat_message.py  chat_session.py  connection.py  dashboard.py  organization.py  saved_query.py  schema_column.py  schema_table.py  upload.py  user.py  widget.py
backend/app/schemas/: alert.py  auth.py  chat.py  common.py  connection.py  dashboard.py  export.py
backend/app/services/: ai_engine.py  alert_service.py  audit_service.py  auth_service.py  cache_service.py  chat_service.py  connection_manager.py  dashboard_service.py  export_service.py  query_executor.py  schema_discoverer.py  token_budget_service.py  upload_service.py
backend/scripts/: seed_demo_data.py  setup_readonly_db_user.sql
backend/tests/: conftest.py
docker/: README.md  (+4 more)
(+96 files in other folders)
